portfolio/devops/portfolio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
  - host: portfolio.odin.thecodedom.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: portfolio-service
            port:
              number: 80
  tls:
  - hosts:
    - portfolio.odin.thecodedom.com
    secretName: portfolio-tls
